# sklite

./: LICENSE  README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
scripts/: install.sh  setup.sh
src/sklite/core/: codec.py  metric.py  transformer.py
src/sklite/metrics/: __init__.py  accuracy_score.py  confusion_matrix.py  mae.py  mape.py  mse.py  r2_score.py  rmse.py
src/sklite/preprocessing/: __init__.py  label_encoding.py  scaler.py  split.py
src/sklite/split/: __init__.py  base.py  function.py  kfold_splitter.py  stratified_kfold_splitter.py  stratified_splitter.py  train_test_splitter.py  train_val_splitter.py  train_val_test_splitter.py
tests/: conftest.py  test_classification_metrics.py  test_label_encoder.py  test_metrics.py  test_scaler.py  test_split.py
