[tool.poetry]
name = "sklite"
version = "0.1.0"
description = ""
authors = ["Lea Yeh <lea.yeh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
seaborn = "*"
torch = "*"
datasets = "*"
plotly = "*"
tqdm = "*"
ipywidgets = "*"
notebook = "*"
jupyterlab = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
